[project]
name = "pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.2",
    "pytest>=9.0.3",
    "sentry-sdk>=2.56.0",
    "sqlalchemy>=2.0.48",
]
